--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.2",
+    "antd": "^4.21.7",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
